# TransportRoutesApp

./: .coverage  .gitignore  config.py  makefile  pyproject.toml  requirements.txt  transportapp.py
app/: __init__.py  constants.py  forms.py  models.py  routes.py  utils.py
app/routes/: __init__.py  auth.py  profile.py  route_management.py
app/static/: style.css
app/templates/: base.html  import_route.html  index.html  login.html  register.html  route_info_form.html  route_list.html  route_prices_matrix.html  route_stops_form.html  user.html
migrations/: env.py
tests/: conftest.py  test_forms.py  test_models.py  test_routes.py  test_utils.py
