[project]
name = "transportroutesapp"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.12, <4.0"
dependencies = [
    "alembic (>=1.17.2,<2.0.0)",
    "blinker (>=1.9.0,<2.0.0)",
    "click (>=8.3.0,<9.0.0)",
    "colorama (>=0.4.6,<1.0.0)",
    "dnspython (>=2.8.0,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "flask-login (>=0.6.3,<1.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "idna (>=3.11,<4.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "mako (>=1.3.10,<2.0.0)",
    "markupsafe (>=3.0.3,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "wtforms (>=3.2.1,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "poetry (>=2.3.2,<3.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-flask (>=1.3.0,<2.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
