[project]
name = "transportroutesapp"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.12, <4.0"
dependencies = [
    "alembic (>=1.17.2,<2.0.0)",
    "blinker (>=1.9.0,<2.0.0)",
    "click (>=8.3.0,<9.0.0)",
    "colorama (>=0.4.6,<1.0.0)",
    "dnspython (>=2.8.0,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "flask-login (>=0.6.3,<1.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "idna (>=3.11,<4.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "mako (>=1.3.10,<2.0.0)",
    "markupsafe (>=3.0.3,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "wtforms (>=3.2.1,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "poetry (>=2.3.2,<3.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-flask (>=1.3.0,<2.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]



[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "./migrations",
]

line-length = 200
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
# E - pycodestyle F - Pyflakes UP - pyupgrade B - flake8-bugbear SIM - flake8-simplify I - isort
# N - flake8-annotations A - flake8-annotations T20 - flake8-tidy-imports ERA - flake8-eradicate
# C4 - flake8-comprehensions TID - flake8-tidy-imports PERF - flake8-perf, G - flake8-logging-format
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
    "N",
    "A",
    "T20",
    "ERA",
    "C4",
    "TID",
    "PERF",
    "G"
]
ignore = ["SIM108", "E712", "C416", "UP037", "T201"]
flake8-bugbear.extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]


# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore E501 (line too long) in tests.
"tests/*" = ["E501"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = "."
addopts = ["--import-mode=importlib", "-v"]
testpaths = ["/tests"]
norecursedirs = [
    ".git",
    ".venv",
    "__pycache__",
    "static",
    "templates",
    "logs"
]
filterwarnings = [
    # Ignore datetime.utcnow() deprecation warnings
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning"
]

[tool.coverage.run]
# Needed by py-cov-action/python-coverage-comment-action to map paths correctly
relative_files = true
omit = ["*/alembic/*"]
